# trade-shield-contract

./: .gitignore  Cargo.toml  README.md  get_all_price_wasm.sh  test_amm.sh
.github/workflows/: release.yml  test.yml
artifacts/: checksums.txt  checksums_intermediate.txt  trade_shield_contract.wasm
contracts/stop-loss-contract/: Cargo.toml
docs/: Limit-Sell.md  Stop-Loss.md  Take-Profit.md
front_end_script/: README.md  package.json  upload.js
scripts/: asset_info.sh  get_all_price_wasm.sh  test_amm.sh
src/: contract.rs  error.rs  helper.rs  lib.rs  msg.rs  state.rs
src/action/: execute.rs  mod.rs  query.rs
src/bindings/: mod.rs  msg.rs  msg_resp.rs  querier.rs  query.rs  query_resp.rs
src/entry_point/: execute.rs  instantiate.rs  migrate.rs  mod.rs  query.rs  reply.rs  sudo.rs
src/msg/: execute_msg.rs  instantiate_msg.rs  mod.rs  query_msg.rs  reply_type.rs  sudo_msg.rs
src/states/: margin_order.rs  mod.rs  order.rs  prices.rs  process_order_executor.rs  processed_spot_order.rs  reply_info.rs  spot_order.rs
src/tests/: cancel_order.rs  create_order.rs  get_order_id_from_events.rs  get_user_id_from_events.rs  mod.rs  new_app.rs  new_contract_addr.rs  new_instantiate_msg.rs  query_message.rs  read_processed_order_id.rs
src/tests/mock/: execute.rs  (+5 more)
src/types/: asset_info.rs  date.rs  earn_type.rs  margin_order.rs  margin_order_type.rs  margin_position.rs  mod.rs  order_price.rs  order_price_pair.rs  order_type.rs  page_request.rs  page_response.rs  pool.rs  price.rs  reply_info.rs  spot_order_price.rs  spot_order_type.rs  status.rs  swap_route.rs
(+139 files in other folders)
