[package]
name = "trade_shield_contract"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "1.1.4", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "0.15.1"
thiserror = "1"
schemars = "0.8.1"
cosmwasm-schema = "1.1.4"
cw-utils = "0.13"
elys-bindings = { git = "https://github.com/elys-network/bindings", tag = "v0.12.0" }

[dev-dependencies]

cw-multi-test = "0.13.4"
serde_json = "1.0.107"
elys-bindings = { git = "https://github.com/elys-network/bindings", tag = "v0.12.0", features = [
    "testing",
] }
elys-bindings-test = { git = "https://github.com/elys-network/bindings", tag = "v0.12.0" }
